trying to fix issue with display on smalls screens

--- a/components/Footer/footer.module.css
+++ b/components/Footer/footer.module.css
@@ -7,8 +7,9 @@
     align-items: center;
     color: white;
     justify-content: space-between;
-
-    @media (max-width: 768px) {
+}
+@media (max-width: 768px) {
+    .footer {
         padding: 1em 0 0 0;
         height: fit-content;
         flex-direction: column;
