--- a/components/Nav/nav.module.css
+++ b/components/Nav/nav.module.css
@@ -7,6 +7,14 @@
     align-items: center;
     font-size: 0.8rem;
 }
+.navIcons {
+    display: none;
+}
+@media (max-width: 768px) {
+    .navIcons {
+        display: block;
+    }
+}
 .links li {
     list-style: none;
 }
@@ -15,8 +23,10 @@
     width: 60%;
     justify-content: space-between;
     align-items: center;
-
-    @media (max-width: 768px) {
+}
+@media (max-width: 768px) {
+    .links {
+        display: none;
         background-color: rgba(50, 53, 64, 0.5);
         padding: 1em 0 2em 2em;
         flex-direction: column;
@@ -34,22 +44,24 @@
     width: 35%;
     display: flex;
     justify-content: space-between;
-    @media (max-width: 1100px) {
+}
+@media (max-width: 1100px) {
+    .midNav {
         width: 55%;
     }
-    @media (max-width: 768px) {
+}
+@media (max-width: 768px) {
+    .midNav {
         flex-direction: column;
         height: 25vh;
     }
 }
-.contact {
-    @media (max-width: 768px) {
+@media (max-width: 768px) {
+    .contact {
         margin-top: 1em;
     }
 }
-/* .navIcons {
-    display: none;
-    @media (max-width: 768px) {
-        display: block !important;
-    }
-} */
+
+.show {
+    display: flex;
+}
